@@ -5,27 +5,32 @@ import id.behavio.core.rule.Outcome;
 import id.behavio.core.rule.ResponseSpec;
 import id.behavio.core.rule.Scenario;
 
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 /**
- * Blueprint SNAP BI untuk endpoint Internal Account Inquiry (service 15).
+ * Blueprint untuk endpoint Access Token B2B.
  * Tiga scenario: Normal, Bank Down (503), Timeout (delay 5 detik).
  */
-public final class AccountInquiryInternalBlueprint {
+public final class AccessTokenBlueprint {
 
     public static final String METHOD = "POST";
-    public static final String PATH = "/v1.0/account-inquiry-internal";
-    public static final String RC_SUCCESS = "2001500";
+    public static final String PATH = "/v1.0/access-token/b2b";
+    public static final String RC_SUCCESS = "2007300";
     public static final String RC_SERVICE_DOWN = "5030000";
 
-    private AccountInquiryInternalBlueprint() {}
+    private AccessTokenBlueprint() {}
 
     public static Scenario normal() {
-        return new Scenario("Normal", Collections.emptyList(),
-                Outcome.of(List.of(), normalResponse()));
+        Map<String, Object> body = new LinkedHashMap<>();
+        body.put("responseCode", "{{responseCode}}");
+        body.put("responseMessage", "{{responseMessage}}");
+        body.put("accessToken", "{{accessToken}}");
+        body.put("tokenType", "Bearer");
+        body.put("expiresIn", "900");
+        return new Scenario("Normal", List.of(),
+                Outcome.of(new ResponseSpec(200, RC_SUCCESS, "Successful", body)));
     }
 
     public static Scenario bankDown() {
@@ -39,22 +44,19 @@ public final class AccountInquiryInternalBlueprint {
 
     public static Scenario timeout(long delayMillis) {
         return new Scenario("Timeout", List.of(),
-                Outcome.withFault(List.of(), normalResponse(), FaultSpec.delayAfter(delayMillis)));
+                Outcome.withFault(List.of(),
+                        new ResponseSpec(200, RC_SUCCESS, "Successful", normalBody()),
+                        FaultSpec.delayAfter(delayMillis)));
     }
 
-    private static ResponseSpec normalResponse() {
+    private static Map<String, Object> normalBody() {
         Map<String, Object> body = new LinkedHashMap<>();
         body.put("responseCode", "{{responseCode}}");
         body.put("responseMessage", "{{responseMessage}}");
-        body.put("referenceNo", "{{referenceNo}}");
-        body.put("partnerReferenceNo", "{{partnerReferenceNo}}");
-        body.put("beneficiaryAccountName", "{{holderName}}");
-        body.put("beneficiaryAccountNo", "{{accountNo}}");
-        body.put("beneficiaryAccountStatus", "Rekening aktif");
-        body.put("beneficiaryAccountType", "S");
-        body.put("currency", "{{currency}}");
-
-        return new ResponseSpec(200, RC_SUCCESS, "Successful", body);
+        body.put("accessToken", "{{accessToken}}");
+        body.put("tokenType", "Bearer");
+        body.put("expiresIn", "900");
+        return body;
     }
 
     private static ResponseSpec errorResponse(int status, String code, String message) {
